--- a/html pages/mainpage.html
+++ b/html pages/mainpage.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="frontpage.html">iQueue</a>
+            <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -36,31 +36,31 @@
             <ul class="nav navbar-nav">
                 <!-- Canteen Dropdown -->
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Canteens <span class="caret"></span></a>
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown">Canteens <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="deck.html">The Deck</a>
+                            <a href="#/deck">The Deck</a>
                         </li>
                         <li>
-                            <a href="terrace.html">The Terrace</a>
+                            <a href="#/terrace">The Terrace</a>
                         </li>
                         <li>
-                            <a href="frontier.html">The Frontier</a>
+                            <a href="#/frontier">The Frontier</a>
                         </li>
                         <li>
-                            <a href="technoedge.html">Technoedge</a>
+                            <a href="#/technoedge">Technoedge</a>
                         </li>
                         <li>
-                            <a href="koufu.html">Koufu @ uTown</a>
+                            <a href="#/koufu">Koufu @ uTown</a>
                         </li>
                         <li>
-                            <a href="foodclique.html">FoodClique @ uTown</a>
+                            <a href="#foodclique">FoodClique @ uTown</a>
                         </li>
 
                     </ul>
                 </li>
                 <li>
-                    <a href="aboutus.html">About Us</a>
+                    <a href="#/aboutus">About Us</a>
                 </li>
             </ul>
 
@@ -68,7 +68,7 @@
 
                 <!-- For the sign up/log in dropdown -->
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login </a>
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login </a>
                     <ul class="dropdown-menu" style="height:250px; width:250px;">
 
                         <form role="form">
@@ -90,7 +90,7 @@
                                 Submit
                             </button>
 
-                            <a href="signup.html" style="float:right; margin-right:50px; margin-top:5px;">No account? Sign up here!</a>
+                            <a href="#/signup" style="float:right; margin-right:50px; margin-top:5px;">No account? Sign up here!</a>
                         </form>
 
                     </ul>
