Navigation bar changed to fixed layout

--- a/html pages/firstpage.html
+++ b/html pages/firstpage.html
@@ -1,67 +1,80 @@
-<div class="row">
-    <div class="text-center">
-        <h2>iQueue</h2>
+<div class="container">
+    <div class="row">
+        <div class="text-center">
+            <h2>iQueue</h2>
+        </div>
     </div>
-</div>
 
-<!-- First Row of canteens -->
-<div class="row">
-    <div style="margin-top:1%;">
-        <div class="col-sm-4">
-            <div class="thumbnail" style="margin-left:10px;">
-                <img src="images/deck.jpg" class="img-rounded" alt="The Deck">
-                <br>
-                <a href="deck.html">The Deck @ Arts</a>
 
+    <!-- First Row of canteens -->
+    <div class="row">
+        <div style="margin-top:2%;">
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <a href="#/deck">
+                    <div class="thumbnail" style="margin-left:10px;">
+                        <img src="images/deck.jpg" class="img-rounded" alt="The Deck">
+                        <br>
+                        <p class="text-center">The Deck @ Arts</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <a href="#/terrace">
+                    <div class="thumbnail">
+                        <img src="images/terrace.jpg" class="img-rounded" alt="The Terrace">
+                        <br>
+                        <p class="text-center">The Terrace @ Biz</p>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <a href="#/frontier">
+                    <div class="thumbnail" style="margin-right:10px;">
+                        <img src="images/frontier.jpg" class="img-rounded" alt="The Frontier">
+                        <br>
+                        <p class="text-center">The Frontier @ Science</p>
+                    </div>
+                </a>
             </div>
         </div>
+    </div>
 
-        <div class="col-sm-4">
-            <div class="thumbnail">
-                <img src="images/terrace.jpg" class="img-rounded" alt="The Terrace">
-                <br>
-                <a href="terrace.html">The Terrace @ Biz</a>
+    <!-- Second Row of Canteens -->
+    <div class="row">
+        <div style="margin-top:1%">
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <a href="#/technoedge">
+                    <div class="thumbnail" style="margin-left:10px;">
+                        <img src="images/technoedge.jpg" class="img-rounded" alt="Technoedge">
+                        <br>
+                        <p class="text-center">Techno Edge @ Engineering</p>
+                    </div>
+                </a>
+            </div>
 
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <a href="#/koufu">
+                    <div class="thumbnail">
+                        <img src="images/koufu.jpg" class="img-rounded" alt="Koufu">
+                        <br>
+                        <p class="text-center">Koufu @ uTown</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <a href="#/foodclique">
+                    <div class="thumbnail" style="margin-right:10px;">
+                        <img src="images/foodclique.jpg" class="img-rounded" alt="Food Clique">
+                        <br>
+                        <p class="text-center">Food Clique @ uTown</p>
+                    </div>
+                </a>
             </div>
         </div>
-
-        <div class="col-sm-4">
-            <div class="thumbnail" style="margin-right:10px;">
-                <img src="images/frontier.jpg" class="img-rounded" alt="The Frontier">
-                <br>
-                <a href="frontier.html">The Frontier @ Science</a>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Second Row of Canteens -->
-<div class="row">
-    <div class="col-sm-4">
-        <div class="thumbnail" style="margin-left:10px;">
-            <img src="images/technoedge.jpg" class="img-rounded" alt="Technoedge">
-            <br>
-            <a href="technoedge.html">Techno Edge @ Engineering</a>
-
-        </div>
     </div>
 
-    <div class="col-sm-4">
-        <div class="thumbnail">
-            <img src="images/koufu.jpg" alt="Koufu" style="height:300px; width:450px;">
-            <br>
-            <a href="koufu.html">Koufu @ uTown</a>
-
-        </div>
-    </div>
-
-    <div class="col-sm-4">
-        <div class="thumbnail" style="margin-right:10px;">
-            <img src="images/foodclique.jpg" alt="Food Clique" style="height:300px; width:450px;">
-            <br>
-            <a href="foodclique.html">Food Clique @ uTown</a>
-
-        </div>
-    </div>
 </div>
