--- a/html pages/firstpage.html
+++ b/html pages/firstpage.html
@@ -12,7 +12,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a href="#/deck">
                     <div class="thumbnail" style="margin-left:10px;">
-                        <img src="images/deck.jpg" class="img-rounded" alt="The Deck">
+                        <img src="images/deck1.jpg" class="img-rounded" alt="The Deck">
                         <br>
                         <p class="text-center">The Deck @ Arts</p>
                     </div>
@@ -22,7 +22,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a href="#/terrace">
                     <div class="thumbnail">
-                        <img src="images/terrace.jpg" class="img-rounded" alt="The Terrace">
+                        <img src="images/terrace1.jpg" class="img-rounded" alt="The Terrace">
                         <br>
                         <p class="text-center">The Terrace @ Biz</p>
                     </div>
@@ -33,7 +33,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a href="#/frontier">
                     <div class="thumbnail" style="margin-right:10px;">
-                        <img src="images/frontier.jpg" class="img-rounded" alt="The Frontier">
+                        <img src="images/frontier1.jpg" class="img-rounded" alt="The Frontier">
                         <br>
                         <p class="text-center">The Frontier @ Science</p>
                     </div>
@@ -48,7 +48,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a href="#/technoedge">
                     <div class="thumbnail" style="margin-left:10px;">
-                        <img src="images/technoedge.jpg" class="img-rounded" alt="Technoedge">
+                        <img src="images/technoedge1.jpg" class="img-rounded" alt="Technoedge">
                         <br>
                         <p class="text-center">Techno Edge @ Engineering</p>
                     </div>
@@ -58,7 +58,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a href="#/koufu">
                     <div class="thumbnail">
-                        <img src="images/koufu.jpg" class="img-rounded" alt="Koufu">
+                        <img src="images/koufu1.jpg" class="img-rounded" alt="Koufu">
                         <br>
                         <p class="text-center">Koufu @ uTown</p>
                     </div>
@@ -68,7 +68,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a href="#/foodclique">
                     <div class="thumbnail" style="margin-right:10px;">
-                        <img src="images/foodclique.jpg" class="img-rounded" alt="Food Clique">
+                        <img src="images/foodclique1.jpg" class="img-rounded" alt="Food Clique">
                         <br>
                         <p class="text-center">Food Clique @ uTown</p>
                     </div>
