added tabs to terrace html page

--- a/html pages/terrace.html
+++ b/html pages/terrace.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="backgroundimages">
-        <div class="row" style="height:400px;">
+        <div class="row" style="height:80px;">
             <div class="text-center">
                 <h2>The Terrace @ Biz</h2>
             </div>
@@ -8,5 +8,80 @@
     </div>
 </div>
 
+<div class="container">
+    <!--<h2>Dynamic Pills</h2> -->
+    <ul class="nav nav-pills">
+        <li class="active"><a data-toggle="pill" href="/#stall1">Chicken Rice Stall</a></li>
+        <li><a data-toggle="pill" href="/#stall2">Western Stall</a></li>
+        <li><a data-toggle="pill" href="/#stall3">Stall 3</a></li>
+        <li><a data-toggle="pill" href="/#stall4">Stall 4</a></li>
+    </ul>
 
+    <div class="tab-content">
+        <div id="stall1" class="tab-pane fade in active">
+            <h3>Chicken Rice Stall</h3>
+            <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
+            <div class="right">
+                <span class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Select Your Meal!<span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">chicken rice</a></li>
+                        <li><a href="#">duck rice</a></li>
+                        <li><a href="#">char siew rice</a></li>
+                    </ul>
+                </span>
+            </div>
+        </div>
+        <div id="stall2" class="tab-pane fade">
+            <h3>Western Stall</h3>
+            <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
+            <div class="right">
+                <span class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Select Your Meal!<span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">chicken rice</a></li>
+                        <li><a href="#">duck rice</a></li>
+                        <li><a href="#">char siew rice</a></li>
+                    </ul>
+                </span>
+            </div>
+        </div>
+        <div id="stall3" class="tab-pane fade">
+            <h3>Stall 3</h3>
+            <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
+            <div class="right">
+                <span class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Select Your Meal!<span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">chicken rice</a></li>
+                        <li><a href="#">duck rice</a></li>
+                        <li><a href="#">char siew rice</a></li>
+                    </ul>
+                </span>
+            </div>
+        </div>
+        <div id="stall4" class="tab-pane fade">
+            <h3>Stall 4</h3>
+            <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
+            <div class="right">
+                <span class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Select Your Meal!<span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">chicken chop</a></li>
+                        <li><a href="#">fish & chips</a></li>
+                        <li><a href="#">spaghetti</a></li>
+                    </ul>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
 
