--- a/html pages/mainpage.html
+++ b/html pages/mainpage.html
@@ -1,3 +1,6 @@
+<!-- This is the HTML page with the navigation bar. Basically this is the backbone of the app -->
+
+
 <!DOCTYPE HTML>
 <html lang="en" data-ng-app="iqueue">
 <head>
@@ -14,6 +17,9 @@
 <script src="js/angular.min.js"></script>
 <script src="js/controller.js"></script>
 <script src="js/angular-route.min.js"></script>
+<script src="js/ivle.js"></script>
+
+
 
 <!-- Auth0's lock widget library -->
 <script type="text/javascript" src="https://cdn.auth0.com/js/lock-7.12.min.js"></script>
