--- a/html pages/mainpage.html
+++ b/html pages/mainpage.html
@@ -20,7 +20,6 @@
 <script src="js/ivle.js"></script>
 
 
-
 <!-- Auth0's lock widget library -->
 <script type="text/javascript" src="https://cdn.auth0.com/js/lock-7.12.min.js"></script>
 <!-- Angular cookie wrapper library for client cookies -->
@@ -104,36 +103,10 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <!-- For the sign up/log in dropdown -->
-                        <li class="dropdown">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown"><span
-                                    class="glyphicon glyphicon-log-in"></span> Login </a>
-                            <ul class="dropdown-menu" style="height:250px; width:250px;">
+                        <li>
+                            <a href=""><span
+                                    class="glyphicon glyphicon-log-in"></span> Login with IVLE </a>
 
-                                <form role="form">
-                                    <div class="form-group" style="padding-left:15px; padding-right:15px">
-                                        <label for="loginid">Username:</label>
-                                        <input class="form-control" id="loginid">
-                                    </div>
-                                    <div class="form-group" style="padding-left:15px; padding-right:15px;">
-                                        <label for="pwd">Password:</label>
-                                        <input type="password" class="form-control" id="pwd">
-                                    </div>
-                                    <div class="checkbox" style="padding-left:15px;">
-                                        <label>
-                                            <input type="checkbox">
-                                            Remember me</label>
-                                    </div>
-
-                                    <button type="submit" class="btn btn-default" style="margin-left:15px;">
-                                        Submit
-                                    </button>
-
-                                    <a href="#/signup" style="float:right; margin-right:50px; margin-top:5px;">No
-                                        account?
-                                        Sign up here!</a>
-                                </form>
-
-                            </ul>
                         </li>
 
                     </ul>
