--- a/html pages/mainpage.html
+++ b/html pages/mainpage.html
@@ -18,14 +18,11 @@
 <script src="js/controller.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="js/ivle.js"></script>
+<script src="js/login.js"></script>
 
 
-<!-- Auth0's lock widget library -->
-<script type="text/javascript" src="https://cdn.auth0.com/js/lock-7.12.min.js"></script>
-<!-- Angular cookie wrapper library for client cookies -->
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
-<!-- Auth0's Angular SDK Library -->
-<script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
 <!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
 <script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
 <!-- Angular wrapper library for JWT-->
@@ -104,9 +101,10 @@
 
                         <!-- For the sign up/log in dropdown -->
                         <li>
-                            <a href=""><span
-                                    class="glyphicon glyphicon-log-in"></span> Login with IVLE </a>
-
+                            <div ng-controller="logInCtrl">
+                            <a ng-href="{{ivleLogInUrl}}" class="btn btn-info" role="button">
+                                <span class="glyphicon glyphicon-log-in"></span> Login with IVLE {{myUrl}}</button></a>
+                            </div>
                         </li>
 
                     </ul>
