--- a/htmlpages/index.html
+++ b/htmlpages/index.html
@@ -2,7 +2,7 @@
 
 
 <!DOCTYPE HTML>
-<html lang="en" data-ng-app="iqueue">
+<html lang="en" data-ng-app="iqueue" ng-controller="overallCtrl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,86 +46,9 @@
 
 
 
-<div class="container">
-    <div class="row">
-        <!-- Navigation bar at the top of the page -->
-        <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped together for better mobile display-->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle Navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
-                </div>
-
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-                    <ul class="nav navbar-nav">
-                        <!-- Canteen Dropdown -->
-                        <li class="dropdown">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Canteens <span
-                                    class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#/deck">The Deck</a>
-                                </li>
-                                <li>
-                                    <a href="#/terrace">The Terrace</a>
-                                </li>
-                                <li>
-                                    <a href="#/frontier">The Frontier</a>
-                                </li>
-                                <li>
-                                    <a href="#/technoedge">Technoedge</a>
-                                </li>
-                                <li>
-                                    <a href="#/koufu">Koufu @ uTown</a>
-                                </li>
-                                <li>
-                                    <a href="#foodclique">FoodClique @ uTown</a>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#/aboutus">About Us</a>
-                        </li>
-                    </ul>
-
-                    <ul class="nav navbar-nav navbar-right">
-
-                        <!-- For the sign up/log in dropdown -->
-                        <li>
-                            <div ng-controller="logInCtrl">
-                            <a ng-href="{{ivleLogInUrl}}" class="btn btn-info" role="button">
-                                <span class="glyphicon glyphicon-log-in"></span> Login with IVLE {{myUrl}}</button></a>
-                            </div>
-                        </li>
-
-                    </ul>
-
-                </div>
-                <!--navbar collapse -->
-            </div>
-            <!--container-fluid -->
-
-        </nav>
-    </div>
-    <!--End of navigation bar -->
-    <div class="row">
-        <div style="margin-top:10%;">
-            <div ng-view></div>
-        </div>
-    </div>
+<div ng-view></div>
 
 
-
-</div>
 </body>
 
 </html>
