--- a/htmlpages/firstpage.html
+++ b/htmlpages/firstpage.html
@@ -1,3 +1,14 @@
+<style>
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
+</style>
+
+
+
 <div class="container">
     <div class="row">
         <!-- Navigation bar at the top of the page -->
@@ -18,45 +29,18 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav">
-                        <!-- Canteen Dropdown -->
-                        <li class="dropdown">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Canteens <span
-                                    class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#/deck">The Deck</a>
-                                </li>
-                                <li>
-                                    <a href="#/terrace">The Terrace</a>
-                                </li>
-                                <li>
-                                    <a href="#/frontier">The Frontier</a>
-                                </li>
-                                <li>
-                                    <a href="#/technoedge">Technoedge</a>
-                                </li>
-                                <li>
-                                    <a href="#/koufu">Koufu @ uTown</a>
-                                </li>
-                                <li>
-                                    <a href="#foodclique">FoodClique @ uTown</a>
-                                </li>
 
-                            </ul>
-                        </li>
                         <li>
                             <a href="#/aboutus">About Us</a>
                         </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-
-                        <!-- For the sign up/log in dropdown -->
+                        <!-- Log in button -->
                         <li>
-                            <div ng-controller="logInCtrl">
-                                <a ng-href="{{ivleLogInUrl}}" class="btn btn-info" role="button">
-                                    <span class="glyphicon glyphicon-log-in"></span> Login with IVLE</button></a>
-                            </div>
+                            <a ng-controller="logInCtrl" ng-href="{{ivleLogInUrl}}"><span class="glyphicon glyphicon-log-in"></span>
+                                Log In with IVLE</a>
+
                         </li>
 
                     </ul>
@@ -68,24 +52,82 @@
 
         </nav>
     </div>
-</div>
 
-<br><br><br>
-<div class="container">
-    <div class="row">
-        <div class="text-center">
-            <h2>YET TO SIGN IN </h2><br>
+
+
+    <br>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+
+            <div class="item active">
+                <img src="images/deck1.jpg" alt="Chania" width="460" height="345">
+                <div class="carousel-caption">
+                    <h3>The Deck</h3>
+                    <p>Located at Arts</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/foodclique1.jpg" alt="Chania" width="460" height="345">
+                <div class="carousel-caption">
+                    <h3>Food Clique</h3>
+                    <p>Located at utown SRC</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/frontier1.jpg" alt="Flower" width="460" height="345">
+                <div class="carousel-caption">
+                    <h3>Frontier</h3>
+                    <p>Located at science</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/koufu1.jpg" alt="Flower" width="460" height="345">
+                <div class="carousel-caption">
+                    <h3>Koufu</h3>
+                    <p>Located at utown </p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/technoedge1.jpg" alt="Flower" width="460" height="345">
+                <div class="carousel-caption">
+                    <h3>Technoedge</h3>
+                    <p>Located at engineering</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/terrace1.jpg" alt="Flower" width="460" height="345">
+                <div class="carousel-caption">
+                    <h3>The terrace</h3>
+                    <p>Located at biz</p>
+                </div>
+            </div>
 
         </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-
-
-
-    <div class="row">
-
-
-    </div>
-
-
-
 </div>
