Added navigation bars to most of the pages

--- a/htmlpages/account.html
+++ b/htmlpages/account.html
@@ -1,5 +1,4 @@
 <div class="container">
-
     <div class="row">
         <!-- Navigation bar at the top of the page -->
         <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
@@ -64,17 +63,17 @@
 
         </nav>
     </div>
+    <br><br><br><br>
 
-    <br><br><br>
-
-    <div class="backgroundimages">
-        <div class="row" style="height:400px;">
-            <div class="text-center">
-                <h2>Technoedge @ Engineering</h2>
-            </div>
+    <div class="row">
+        <div class="text-center">
+            <h2>This is account page.</h2>
         </div>
     </div>
+
+
+
+
+
+
 </div>
-
-
-
