--- a/htmlpages/aboutus.html
+++ b/htmlpages/aboutus.html
@@ -1,4 +1,49 @@
 <div class="container">
+
+    <div class="row">
+        <!-- Navigation bar at the top of the page -->
+        <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped together for better mobile display-->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                    <ul class="nav navbar-nav">
+
+                        <li>
+                            <a href="#/aboutus">About Us</a>
+                        </li>
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <!-- Log in button -->
+                        <li>
+                            <a ng-controller="logInCtrl" ng-href="{{ivleLogInUrl}}"><span class="glyphicon glyphicon-log-in"></span>
+                                Log In with IVLE</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+                <!--navbar collapse -->
+            </div>
+            <!--container-fluid -->
+
+        </nav>
+    </div>
+
+
     <div class="row">
         <div class="text-center">
             <h2>About Us</h2><br><br>
