--- a/htmlpages/deck.html
+++ b/htmlpages/deck.html
@@ -1,4 +1,73 @@
 <div class="container">
+
+    <div class="row">
+        <!-- Navigation bar at the top of the page -->
+        <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped together for better mobile display-->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                    <ul class="nav navbar-nav">
+                        <!-- Canteen Dropdown -->
+                        <li class="dropdown">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Canteens <span
+                                    class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#/deck">The Deck</a>
+                                </li>
+                                <li>
+                                    <a href="#/terrace">The Terrace</a>
+                                </li>
+                                <li>
+                                    <a href="#/frontier">The Frontier</a>
+                                </li>
+                                <li>
+                                    <a href="#/technoedge">Technoedge</a>
+                                </li>
+                                <li>
+                                    <a href="#/koufu">Koufu @ uTown</a>
+                                </li>
+                                <li>
+                                    <a href="#foodclique">FoodClique @ uTown</a>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#/aboutus">About Us</a>
+                        </li>
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#/account">Account</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+                <!--navbar collapse -->
+            </div>
+            <!--container-fluid -->
+
+        </nav>
+    </div>
+
+    <br><br><br>
+
+
     <div class="backgroundimages">
         <div class="row" style="height:400px;">
             <div class="text-center">
