--- a/htmlpages/loggedin.html
+++ b/htmlpages/loggedin.html
@@ -50,13 +50,8 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-
-                        <!-- For the sign up/log in dropdown -->
                         <li>
-                            <div ng-controller="logInCtrl">
-                                <a ng-href="{{ivleLogInUrl}}" class="btn btn-info" role="button">
-                                    <span class="glyphicon glyphicon-log-in"></span> Login with IVLE</button></a>
-                            </div>
+                            <a href="#/account">Account</a>
                         </li>
 
                     </ul>
@@ -68,11 +63,8 @@
 
         </nav>
     </div>
-</div>
+<br><br><br><br>
 
-
-<br><br><br>
-<div class="container">
     <div class="row">
         <div class="text-center">
             <h2>LOGGED IN. HELLO {{username}}</h2>
@@ -81,10 +73,6 @@
 
 
 
-    <div class="row">
-
-
-    </div>
 
 
 
