--- a/htmlpages/aboutus.html
+++ b/htmlpages/aboutus.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <div class="row">
+    <div class="row" ng-controller="firstPageCtrl">
         <!-- Navigation bar at the top of the page -->
         <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
             <div class="container-fluid">
@@ -13,7 +13,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
+                    <a class="navbar-brand" ui-sref="home">iQueue</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -21,14 +21,14 @@
                     <ul class="nav navbar-nav">
 
                         <li>
-                            <a href="#/aboutus">About Us</a>
+                            <a ui-sref="aboutus">About Us</a>
                         </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
                         <!-- Log in button -->
                         <li>
-                            <a ng-controller="logInCtrl" ng-href="{{ivleLogInUrl}}"><span class="glyphicon glyphicon-log-in"></span>
+                            <a ng-href="{{ivleLogInUrl}}"><span class="glyphicon glyphicon-log-in"></span>
                                 Log In with IVLE</a>
 
                         </li>
