--- a/htmlpages/firstpage.html
+++ b/htmlpages/firstpage.html
@@ -23,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
+                    <a class="navbar-brand" ui-sref="home">iQueue</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -31,7 +31,7 @@
                     <ul class="nav navbar-nav">
 
                         <li>
-                            <a href="#/aboutus">About Us</a>
+                            <a ui-sref="aboutus">About Us</a>
                         </li>
                     </ul>
 
