--- a/htmlpages/index.html
+++ b/htmlpages/index.html
@@ -17,8 +17,8 @@
 <script src="js/angular.min.js"></script>
 <script src="js/controller.js"></script>
 <script src="js/angular-route.min.js"></script>
-<script src="js/ivle.js"></script>
 <script src="js/login.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></scrip
 
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
@@ -45,7 +45,7 @@
 
 
 
-<div ng-view></div>
+<div ui-view></div>
 
 
 
