--- a/htmlpages/koufu.html
+++ b/htmlpages/koufu.html
@@ -13,7 +13,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#/mainpage.html">iQueue</a>
+                    <a class="navbar-brand" ui-sref="home">iQueue</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -25,34 +25,34 @@
                                     class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="#/deck">The Deck</a>
+                                    <a ui-sref="deck">The Deck</a>
                                 </li>
                                 <li>
-                                    <a href="#/terrace">The Terrace</a>
+                                    <a ui-sref="terrace">The Terrace</a>
                                 </li>
                                 <li>
-                                    <a href="#/frontier">The Frontier</a>
+                                    <a ui-sref="frontier">The Frontier</a>
                                 </li>
                                 <li>
-                                    <a href="#/technoedge">Technoedge</a>
+                                    <a ui-sref="technoedge">Technoedge</a>
                                 </li>
                                 <li>
-                                    <a href="#/koufu">Koufu @ uTown</a>
+                                    <a ui-sref="koufu">Koufu @ uTown</a>
                                 </li>
                                 <li>
-                                    <a href="#foodclique">FoodClique @ uTown</a>
+                                    <a ui-sref="foodclique">FoodClique @ uTown</a>
                                 </li>
 
                             </ul>
                         </li>
                         <li>
-                            <a href="#/aboutus">About Us</a>
+                            <a ui-sref="aboutus">About Us</a>
                         </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#/account">Account</a>
+                            <a ui-sref="account">Account</a>
                         </li>
 
                     </ul>
