--- a/htmlpages/index.html
+++ b/htmlpages/index.html
@@ -4,6 +4,7 @@
 <!DOCTYPE HTML>
 <html lang="en" data-ng-app="iqueue" ng-controller="overallCtrl">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
