Added the order page

--- a/htmlpages/index.html
+++ b/htmlpages/index.html
@@ -11,6 +11,7 @@
     <title>iQueue | We queue for you</title>
 </head>
 
+<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
